--- a/ProdDetail.htm
+++ b/ProdDetail.htm
@@ -8,36 +8,160 @@
     <script src="js/jqm.page.params.js" type="text/javascript"></script>
     <script src="js/purl.js" type="text/javascript"></script>
     <script src="js/Base64.js" type="text/javascript"></script>
-    <script src="js/Globals.js" type="text/javascript"></script>
-    <script src="js/ProdLineProvider.js" type="text/javascript"></script>
+    <script src="js/json2.js" type="text/javascript"></script>
+    <script src="js/ProdLine.Utils.js" type="text/javascript"></script>
+    <script src="js/ProdLine.Shared.js" type="text/javascript"></script>
+    <script src="js/ProdLine.Provider.js" type="text/javascript"></script>
 </head>
 <body>
-    <div id="pgProdDetail" data-role="page" data-theme="d">
+    <div id="pgProdDetail" data-role="page" data-theme="d" data-fetch="always">
         <div data-role="header" data-theme="b">
-            <a href="index.htm" class="ui-btn-left" data-role="button" data-rel="back" data-theme="b">
-                Back</a>
+            <a href="#" class="ui-btn-left" data-icon="back" data-role="button" data-rel="back"
+                data-theme="b">Back</a>
             <h1>
                 Product Line</h1>
-            <a id="lnkMyProfile" href="MyProfile.htm" data-icon="gear" class="ui-btn-right" data-theme="b">My Profile</a>
+            <a id="lnkMyProfile" href="MyProfile.htm" data-icon="gear" class="ui-btn-right" data-theme="b">
+                My Profile</a>
         </div>
         <div data-role="content" data-theme="d">
-            <span id="lblProId"></span>
+            <span id="lblProId"></span>&nbsp; <span id="lblUnitPrice"></span><a id="lnkLoginToBuyNow"
+                href="#" data-role="button" data-inline="true" data-transition="flow" data-theme="b"
+                data-mini="true" style="display: none">Buy Now</a> <a id="lnkPopupBuyNow" href="#popupCcInfo"
+                    data-rel="popup" data-position-to="window" data-role="button" data-inline="true"
+                    data-icon="check" data-theme="b" data-transition="slidedown" data-mini="true"
+                    style="display: none">Buy Now</a> <a id="lnkPopupOrdConfm" href="#popupOrdConfm"
+                        data-rel="popup" data-position-to="window" data-role="button" data-inline="true"
+                        data-icon="check" data-theme="b" data-transition="slidedown" data-mini="true"
+                        style="display: none">Order Confirmed</a>
+        </div>
+        <div data-role="popup" id="popupBuyNow" data-theme="a">
+            <div data-role="popup" id="popupCcInfo" data-theme="a" class="ui-corner-all">
+                <a href="#" data-rel="back" data-role="button" data-theme="a" data-icon="delete"
+                    data-iconpos="notext" class="ui-btn-right">Close</a>
+                <div style="padding: 10px 20px;">
+                    <h3>
+                        Confirm Credit card:</h3>
+                    <hr />
+                    You will be charged <strong>$<span id="lblPriceInPopup"></span> </strong>for this
+                    order.
+                    <br />
+                    <br />
+                    <div id="dv3digitCode" class="ui-grid-a">
+                        <div class="ui-block-a" style="padding: 0.5em 0.5em 0.5em 0.5em">
+                            3 digit code:</div>
+                        <input name="cc3digitCode" id="cc3digitCode" value="" data-theme="a" type="password"
+                            class="ui-block-b" data-mini="true" />
+                    </div>
+                    <hr />
+                    <div id="lblOrderSaveMsg" style="display: none; color: #8B0000;">
+                        Try Again!</div>
+                    <a id="lnkCcSubmit" href="#" data-role="button" data-inline="true" data-transition="flow"
+                        data-theme="b" data-mini="true">Submit</a>
+                </div>
+            </div>
+        </div>
+        <div data-role="popup" id="popupOrderConfirmation" data-theme="a">
+            <div data-role="popup" id="popupOrdConfm" data-theme="a" class="ui-corner-all">
+                <a href="#" data-rel="back" data-role="button" data-theme="a" data-icon="delete"
+                    data-iconpos="notext" class="ui-btn-right">Close</a>
+                <div style="padding: 10px 20px;">
+                    <h3>
+                        Order Confirmation</h3>
+                    <hr />
+                    Your order has been completed successfully!
+                </div>
+            </div>
         </div>
         <script type="text/javascript">
 
-            Globals.$CurrentPage = $("#pgProdDetail");
-            Globals.$CurrentPage.off();
+            ProdLine.ClassProdDetailPage = function () {
+                var lnkLoginToBuyNow, lnkPopupBuyNow;
+                var lblProdId, lblUnitPrice, lblOrderSaveMsg;
+                var lnkPopupOrdConfm, popupCcInfo;
 
-            function GetProductInfoCallback(data) {
-                $("#lblProId", Globals.$CurrentPage[0]).text(data.ShortName);
-            }
-            
-            Globals.$CurrentPage.on("pageshow", function () {
-                Globals.AddMyProfileLinkClickHandler("#lnkMyProfile");
-                
-                var currentProdId = $.url().param('ProductId');
-                ProdLineProvider.Product.GetProductInfoWithCallback(currentProdId, GetProductInfoCallback);
+                var canBuy = function () {
+                    return ProdLine.Shared.ContextUser.IsLoggedIn() && ProdLine.Shared.ContextUser.IsSessionSecured();
+                };
+
+                var pgProductInfoCallback = function (data) {
+                    lblProdId.text(data.ProductId);
+                    $("#lblPriceInPopup", $.mobile.activePage[0]).text(data.Price);
+                    lblUnitPrice.text(data.Price);
+                    showBuyButton();
+                    $.mobile.loading('hide');
+                };
+
+                var pgOrderCreated = function (data) {
+                    $.mobile.loading('hide');
+                    if (data == false) {
+                        lblOrderSaveMsg.show();
+                    } else {
+                        popupCcInfo.one('popupafterclose', function () {
+                            //alert("ok");
+                            window.setTimeout(function () { lnkPopupOrdConfm.click(); }, 100);
+                        });
+                        popupCcInfo.popup("close");
+                    }
+
+                };
+
+                var showBuyButton = function () {
+                    if (canBuy()) {
+                        lnkLoginToBuyNow.hide().trigger('updatelayout'); ;
+                        lnkPopupBuyNow.show().trigger('updatelayout'); ;
+                    } else {
+                        lnkLoginToBuyNow.show().trigger('updatelayout'); ;
+                        lnkPopupBuyNow.hide().trigger('updatelayout'); ;
+                    }
+                };
+
+                this.LoadProductInfo = function () {
+                    var currentProdId = $.url().param('ProductId');
+                    ProdLine.Provider.Product.GetProductInfoWithCallback(currentProdId, pgProductInfoCallback);
+                };
+
+                this.Init = function () {
+                    lnkLoginToBuyNow = $("#lnkLoginToBuyNow", $.mobile.activePage[0]);
+                    lnkPopupBuyNow = $("#lnkPopupBuyNow", $.mobile.activePage[0]);
+                    lblProdId = $("#lblProId", $.mobile.activePage[0]);
+                    lblUnitPrice = $("#lblUnitPrice", $.mobile.activePage[0]);
+                    lblOrderSaveMsg = $("#lblOrderSaveMsg", $.mobile.activePage[0]);
+                    lnkPopupOrdConfm = $("#lnkPopupOrdConfm", $.mobile.activePage[0]);
+                    popupCcInfo = $("#popupCcInfo", $.mobile.activePage[0]);
+
+                    lnkLoginToBuyNow.on('click', function () {
+                        if (!canBuy()) {
+                            $.mobile.changePage("Login.htm", {
+                                role: 'dialog',
+                                reloadPage: true,
+                                type: 'get'
+                                //,changeHash: false //or fromHashChange:true //cancelling popup should return to previous page
+                            });
+                            return;
+                        }
+                        showBuyButton();
+                    });
+
+                    $("#lnkCcSubmit", $.mobile.activePage[0]).on('click', function () {
+                        lblOrderSaveMsg.hide();
+                        $.mobile.loading('show');
+                        var cc3DigitCode = $("#cc3digitCode", $.mobile.activePage[0]).val();
+                        ProdLine.Provider.Customer.CreateOrderWithCallback(lblProdId.text(), 1, lblUnitPrice.text(), cc3DigitCode, pgOrderCreated);
+                    });
+                };
+
+
+            };
+
+
+            var prodDetailPage = new ProdLine.ClassProdDetailPage();
+
+            $("#pgProdDetail").one("pageshow", function () {
+                $.mobile.loading('show');
+                prodDetailPage.Init();
+                prodDetailPage.LoadProductInfo();
             });
+
 
         </script>
     </div>
