changed index.html to .html from all files

--- a/Register.htm
+++ b/Register.htm
@@ -16,7 +16,7 @@
 <body>
     <div id="pgRegister" data-role="page" data-theme="d">
         <div data-role="header" data-theme="b">
-            <a href="index.htm" class="ui-btn-left" data-icon="home" data-role="button" data-theme="b" data-iconpos="notext" data-transition="slide"></a>
+            <a href="index.html" class="ui-btn-left" data-icon="home" data-role="button" data-theme="b" data-iconpos="notext" data-transition="slide"></a>
             <h1>
                 Product Line</h1>
         </div>
@@ -38,7 +38,7 @@
             <label id="lblErrMsg" style="color: #8B0000; display: none">
                 Invalid data. Try again!</label>
             <a id="lnkRegister" href="MyProfile.htm" data-role="button" data-icon="check" data-inline="true" data-transition="flow"
-                data-theme="b" data-mini="true" >Register</a> <a href="index.htm" data-icon="delete" data-role="button" data-inline="true"
+                data-theme="b" data-mini="true" >Register</a> <a href="index.html" data-icon="delete" data-role="button" data-inline="true"
                     data-theme="c" data-mini="true" >Cancel</a>
         </div>
         <script type="text/javascript">
