--- a/login.htm
+++ b/login.htm
@@ -16,7 +16,7 @@
 <body>
     <div id="pgLogin" data-role="page" data-theme="d">
         <!-- <div data-role="header" data-theme="b">
-            <a href="index.htm" class="ui-btn-left" data-icon="home" data-role="button" data-theme="b"
+            <a href="index.html" class="ui-btn-left" data-icon="home" data-role="button" data-theme="b"
                 data-iconpos="notext" data-transition="slide"></a>
             <h1>
                 Product Line</h1>
