--- a/MyProfile.htm
+++ b/MyProfile.htm
@@ -369,12 +369,14 @@
 
             $("#pgMyProfile").one("pagebeforeshow", function () {
                 if (!profilePage.CanShow()) {
-                    $.mobile.changePage("Login.htm", {
-                        //role: 'dialog',
-                        reloadPage: true,
-                        type: 'get',
-                        changeHash: false //or fromHashChange:true //cancelling popup should return to previous page
-                    });
+                    //                    $.mobile.changePage("Login.htm", {
+                    //                        //role: 'dialog',
+                    //                        reloadPage: true,
+                    //                        type: 'get',
+                    //                        changeHash: false //or fromHashChange:true //cancelling popup should return to previous page
+                    //                    });
+
+                    $.mobile.changePage("LoginPage.htm");
                 }
             });
 
