--- a/PaymentSetup.htm
+++ b/PaymentSetup.htm
@@ -84,7 +84,7 @@
                                 Expiry Date:</div>
                             <input id="edEdit" class="ui-block-b" style="padding: 0.5em 0.5em 0.5em 0.5em" data-mini="true" />
                             <div class="ui-block-a" style="padding: 0.5em 0.5em 0.5em 0.0em">
-                                <div id="lblPaymentInfoSaveMsg" style="display: none;color: #8B0000;">
+                                <div id="lblPaymentInfoSaveMsg" style="display: none; color: #8B0000;">
                                     Try Again!</div>
                                 <a id="lnkSavePaymentInfo" href="#" data-role="button" data-inline="true" data-transition="flow"
                                     data-theme="b" data-mini="true">Save</a> <a id="lnkCancelEditPaymentInfo" href="#"
@@ -184,12 +184,15 @@
 
                 $("#pgPaymentSetup").one("pagebeforeshow", function () {
                     if (!paymentPage.CanShow()) {
-                        $.mobile.changePage("Login.htm", {
-                            role: 'dialog',
-                            reloadPage: true,
-                            type: 'get',
-                            changeHash: false //or fromHashChange:true //cancelling popup should return to previous page
-                        });
+                        //                        $.mobile.changePage("Login.htm", {
+                        //                            role: 'dialog',
+                        //                            reloadPage: true,
+                        //                            type: 'get',
+                        //                            changeHash: false //or fromHashChange:true //cancelling popup should return to previous page
+                        //                        });
+
+                        //changed to normal page using the following
+                        $.mobile.changePage("LoginPage.htm");
                     }
                 });
 
