--- a/ProdDetail.htm
+++ b/ProdDetail.htm
@@ -6,6 +6,7 @@
     <script src="js/jquery-1.8.2.js" type="text/javascript"></script>
     <script src="js/jquery.mobile-1.2.0.js" type="text/javascript"></script>
     <script src="js/jqm.page.params.js" type="text/javascript"></script>
+    <script src="js/jquery.formatCurrency-1.4.0.js" type="text/javascript"></script>
     <script src="js/purl.js" type="text/javascript"></script>
     <script src="js/Base64.js" type="text/javascript"></script>
     <script src="js/json2.js" type="text/javascript"></script>
@@ -24,15 +25,42 @@
                 My Profile</a>
         </div>
         <div data-role="content" data-theme="d">
-            <span id="lblProId"></span>&nbsp; <span id="lblUnitPrice"></span><a id="lnkLoginToBuyNow"
-                href="#" data-role="button" data-inline="true" data-transition="flow" data-theme="b"
-                data-mini="true" style="display: none">Buy Now</a> <a id="lnkPopupBuyNow" href="#popupCcInfo"
-                    data-rel="popup" data-position-to="window" data-role="button" data-inline="true"
-                    data-icon="check" data-theme="b" data-transition="slidedown" data-mini="true"
-                    style="display: none">Buy Now</a> <a id="lnkPopupOrdConfm" href="#popupOrdConfm"
-                        data-rel="popup" data-position-to="window" data-role="button" data-inline="true"
-                        data-icon="check" data-theme="b" data-transition="slidedown" data-mini="true"
-                        style="display: none">Order Confirmed</a>
+            <div>
+                <div style="float: left; font-size: 1.17em; font-weight: bold; padding-top: 5px">
+                    <span id="lblProductName"></span>
+                </div>
+                <div style="float: left; padding-top: 10px; font-family: tahoma; font-size: 11px;
+                    color: #5F9EA0; padding-left: 5px">
+                    (<span id="lblProId"></span>)
+                </div>
+            </div>
+            <div style="clear: both">
+            </div>
+            <div style="font-family: tahoma; font-size: 11px; color: #5F9EA0">
+                <strong>Category:</strong> <span id="lblCategoryName"></span>
+            </div>
+            <div style="margin-top: 5px">
+                <div style="float: left; font-size: 20px; color: #009900; font-weight: bold; padding-top: 10px">
+                    <span id="lblUnitPrice"></span><span id="hdnUnitPrice" style="display: none"></span>
+                </div>
+                <div style="float: left">
+                    <a id="lnkLoginToBuyNow" href="#" data-role="button" data-inline="true" data-transition="flow"
+                        data-theme="b" data-mini="true" style="display: none">Buy Now</a><a id="lnkPopupBuyNow"
+                            href="#popupCcInfo" data-rel="popup" data-position-to="window" data-role="button"
+                            data-inline="true" data-icon="check" data-theme="b" data-transition="slidedown"
+                            data-mini="true" style="display: none">Buy Now</a> <a id="lnkPopupOrdConfm" href="#popupOrdConfm"
+                                data-rel="popup" data-position-to="window" data-role="button" data-inline="true"
+                                data-icon="check" data-theme="b" data-transition="slidedown" data-mini="true"
+                                style="display: none">Order Confirmed</a>
+                </div>
+            </div>
+            <div style="clear: both">
+            </div>
+            <br />
+            <strong>Description</strong>
+            <hr />
+            <div id="lblDescription">
+            </div>
         </div>
         <div data-role="popup" id="popupBuyNow" data-theme="a">
             <div data-role="popup" id="popupCcInfo" data-theme="a" class="ui-corner-all">
@@ -42,7 +70,7 @@
                     <h3>
                         Confirm Credit card:</h3>
                     <hr />
-                    You will be charged <strong>$<span id="lblPriceInPopup"></span> </strong>for this
+                    You will be charged <strong><span id="lblPriceInPopup"></span></strong>for this
                     order.
                     <br />
                     <br />
@@ -76,7 +104,7 @@
 
             ProdLine.ClassProdDetailPage = function () {
                 var lnkLoginToBuyNow, lnkPopupBuyNow;
-                var lblProdId, lblUnitPrice, lblOrderSaveMsg;
+                var lblProdId, hdnUnitPrice, lblOrderSaveMsg;
                 var lnkPopupOrdConfm, popupCcInfo;
 
                 var canBuy = function () {
@@ -85,8 +113,12 @@
 
                 var pgProductInfoCallback = function (data) {
                     lblProdId.text(data.ProductId);
-                    $("#lblPriceInPopup", $.mobile.activePage[0]).text(data.Price);
-                    lblUnitPrice.text(data.Price);
+                    hdnUnitPrice.text(data.Price);
+                    $("#lblUnitPrice", $.mobile.activePage[0]).text(data.Price).formatCurrency();
+                    $("#lblProductName", $.mobile.activePage[0]).text(data.ShortName);
+                    $("#lblCategoryName", $.mobile.activePage[0]).text(data.CategoryName);
+                    $("#lblDescription", $.mobile.activePage[0]).text(data.Description);
+                    $("#lblPriceInPopup", $.mobile.activePage[0]).text(data.Price).formatCurrency();
                     showBuyButton();
                     $.mobile.loading('hide');
                 };
@@ -124,7 +156,7 @@
                     lnkLoginToBuyNow = $("#lnkLoginToBuyNow", $.mobile.activePage[0]);
                     lnkPopupBuyNow = $("#lnkPopupBuyNow", $.mobile.activePage[0]);
                     lblProdId = $("#lblProId", $.mobile.activePage[0]);
-                    lblUnitPrice = $("#lblUnitPrice", $.mobile.activePage[0]);
+                    hdnUnitPrice = $("#hdnUnitPrice", $.mobile.activePage[0]);
                     lblOrderSaveMsg = $("#lblOrderSaveMsg", $.mobile.activePage[0]);
                     lnkPopupOrdConfm = $("#lnkPopupOrdConfm", $.mobile.activePage[0]);
                     popupCcInfo = $("#popupCcInfo", $.mobile.activePage[0]);
@@ -149,7 +181,7 @@
                         lblOrderSaveMsg.hide();
                         $.mobile.loading('show');
                         var cc3DigitCode = $("#cc3digitCode", $.mobile.activePage[0]).val();
-                        ProdLine.Provider.Customer.CreateOrderWithCallback(lblProdId.text(), 1, lblUnitPrice.text(), cc3DigitCode, pgOrderCreated);
+                        ProdLine.Provider.Customer.CreateOrderWithCallback(lblProdId.text(), 1, hdnUnitPrice.text(), cc3DigitCode, pgOrderCreated);
                     });
                 };
 
