--- a/ProdList.htm
+++ b/ProdList.htm
@@ -6,6 +6,7 @@
     <script src="js/jquery-1.8.2.js" type="text/javascript"></script>
     <script src="js/jquery.mobile-1.2.0.js" type="text/javascript"></script>
     <script src="js/jqm.page.params.js" type="text/javascript"></script>
+    <script src="js/jquery.formatCurrency-1.4.0.js" type="text/javascript"></script>
     <script src="js/purl.js" type="text/javascript"></script>
     <script src="js/Base64.js" type="text/javascript"></script>
     <script src="js/json2.js" type="text/javascript"></script>
