login page cancel fix

--- a/MyProfile.htm
+++ b/MyProfile.htm
@@ -380,7 +380,7 @@
                     //});
 
                     //changed to normal page using the following
-                    $.mobile.changePage("LoginPage.htm");
+                    $.mobile.changePage("LoginPage.htm", { changeHash: false });
                 }
             });
 
